<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Network Swiss Army Knife</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="title_activity_wifi_anlayzer">Wifi Anlayzer</string>
    <string name="title_activity_scan_network">Scan Network</string>
    <string name="title_ping">Ping</string>
    <string name="title_traceroute">Traceroute</string>
    <string name="title_ip_calculator">IP Calculator</string>
    <string name="title_whois">Whois</string>
    <string name="title_network_info">Network Info</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="network_scanned">Scanned</string>
    <string name="ip_address">IP Address</string>
    <string name="host_name">Host Name</string>
    <string name="mac_address">Mac Address</string>
    <string name="vendor">Vendor</string>
    <string name="type">Type</string>
    <string name="netbios_name">NetBIOS Name</string>
    <string name="network_info">Network Info</string>
    <string name="wifi_info">Wifi Info</string>
    <string name="device_info">Device Info</string>
    <string name="general_info">General Info</string>
    <string name="first_discovered">First Discovered</string>
    <string name="last_seen">Last Seen</string>
    <string name="status">Status</string>

    <string name="status_up">Up</string>
    <string name="status_down">Down</string>
    <string name="gateway">Gateway</string>
    <string name="device">Device</string>
    <string name="ssid">SSID</string>
    <string name="bssid">BSSID</string>
    <string name="dns">DNS</string>
    <string name="my_device">My Device</string>

    <string name="scan_ports">Scan Ports</string>
    <string name="ping_host">Ping</string>
    <string name="traceroute">Traceroute</string>
    <string name="host_or_ip">Host or IP address</string>
    <string name="host_or_ip_hint">e.g. google.com</string>

    <string name="timeout">Timeout</string>
    <string name="count">Count</string>
    <string name="packet_size">Packet Size</string>
    <string name="infinite">Infinite</string>
    <string name="number_of_bytes">Number bytes to be sent</string>
    <string name="time_to_live">Time To Live</string>
    <string name="time_to_live_hint">Set the IP Time to Live</string>
    <string name="pings_interval">Pings interval</string>

    <string name="error_empty_field">Must not be empty</string>
    <string name="hostname">Hostname</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="country">Country</string>
    <string name="location">Location</string>
    <string name="organization">Organization</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone">Phone</string>
    <string name="ip_calculator">IP Calculator</string>
    <string name="mask_or_cidr">Mask or CIDR</string>

    <string name="network">Network</string>
    <string name="netmask">Netmask</string>
    <string name="wildcard_mask">Wildcard mask</string>
    <string name="cidr">CIDR</string>
    <string name="first_available_address">First available address</string>
    <string name="last_available_address">Last available address</string>
    <string name="broadcast">Broadcast</string>
    <string name="available_address">Number of addresses in mask</string>

    <string name="ip_address_wrong">Invalid IP Address</string>
    <string name="mask_wrong">Invalid subnet mask. Must be in format *.*.*.* (one of allowed) or number from 0 to 32 (CIDR)</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="pings_interval_hint">Delay interval in seconds</string>

</resources>
