<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/network_scanner"
            android:checked="true"
            android:title="@string/title_activity_scan_network"/>
        <item
            android:id="@+id/wifi_analyzer"
            android:title="@string/title_activity_wifi_anlayzer"/>
        <item
            android:id="@+id/whois"
            android:title="@string/title_whois"/>
        <item
            android:id="@+id/ping"
            android:title="@string/title_ping"/>
        <item
            android:id="@+id/traceroute"
            android:title="@string/title_traceroute"/>
        <item
            android:id="@+id/my_ip"
            android:title="@string/title_my_im_isp"/>
        <item
            android:id="@+id/ip_calculator"
            android:title="@string/title_ip_calculator"/>
    </group>
</menu>